# TinyRenderer

./: LICENSE  README.md
Code/: Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  Texture.cpp  Texture.h  main.cpp  model.cpp  model.h  rasterizer.cpp  rasterizer.h  renderer.cpp  renderer.h  utilities.cpp  utilities.h
Code/Shaders/: Shader.cpp  Shader.h
Code/ThirdParties/: geometry.cpp  tgaimage.h
Outputs/: output_1.tga  output_2.tga  output_3.tga  output_4.tga
